--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,16 +1,28 @@
-html{
+$font-stack: Helvetica, sans-serif;
+
+$primary-vivid-blue: #0E5FE3;
+$primary-black: #191919;
+$primary-light-greyish-blue: #F6F7F8;
+
+$secondary-dark-blue: #0A49AF;
+$secondary-sky-blue: #2AB7FE;
+
+
+$lawconnect-gradient: linear-gradient(to right, $primary-vivid-blue , $secondary-dark-blue);
+
+html {
   padding: none;
+  font: 100% $font-stack;
 }
 
 .layout {
   width: 100%;
 
   display: flex;
-  gap: 16px;
+  gap: 68px;
   flex-wrap: wrap;
 
   justify-content: center;
-  align-items: center;
 }
 
 .background {
@@ -19,7 +31,10 @@ html{
 }
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  width: 40%;
+  max-width: 322px;
+  img {
+    max-width: 322px;
+  }
 }
