--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,3 +1,4 @@
+// Global Variable 
 $font-stack: Helvetica, sans-serif;
 
 $primary-vivid-blue: #0e5fe3;
@@ -18,6 +19,19 @@ html {
   font: 100% $font-stack;
 }
 
+// Global Variable End
+
+.background {
+  background: transparent linear-gradient(0deg, #0a49af 0%, #0e5fe3 100%) 0% 0%
+    no-repeat padding-box;
+}
+
+
+
+
+
+// CardSection Components CSS
+
 .card-layout {
   width: 100%;
 
@@ -28,14 +42,10 @@ html {
   justify-content: center;
 }
 
-.background {
-  background: transparent linear-gradient(0deg, #0a49af 0%, #0e5fe3 100%) 0% 0%
-    no-repeat padding-box;
-}
-
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
+  background: #ffffff;
+  box-shadow: 0px 5px 15px #00000026;
+  border-radius: 5px;
   max-width: 322px;
   max-height: 320px;
   img {
@@ -43,6 +53,19 @@ html {
     max-height: 160px;
   }
   .card-body {
-    font-style: bold;
+    text-align: left;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 24px;
+    padding-right: 24px;
+    color: $primary-black;
+    font-size: 16px;
+    letter-spacing: 0.08px;
+
+    h4 {
+      color: $secondary-dark-blue;
+      font-size: 18px;
+      font-weight: bold;
+    }
   }
 }
