two jumbtron is components

--- a/src/style/CardSection.scss
+++ b/src/style/CardSection.scss
@@ -1,7 +1,14 @@
 @import "./global.scss";
 
+.cardHeader {
+  color: $secondary-dark-blue;
+  font-size: 36px;
+  font-weight: 600;
+  text-align: center;
+}
+
 .card-layout {
-  width: 100%;
+  width: 100vw;
   display: flex;
   gap: 68px;
   flex-wrap: wrap;
@@ -16,7 +23,7 @@
   max-height: 320px;
   card-image {
     max-width: 322px;
-    max-height: 160px; 
+    max-height: 160px;
   }
 
   .card-body {
