--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -13,19 +13,20 @@ $lawconnect-gradient: linear-gradient(
   $secondary-dark-blue
 );
 
-.sectionHeader {
-  color: $secondary-dark-blue;
-  font-size: 36px;
-  text-align: left;
-}
-
 html {
-  padding: none;
-  margin: none;
   font-family: 'Nunito', sans-serif;
+  font-weight: 400;
 }
 
 .sectionContainer{
     padding-top: 32px;
     padding-bottom: 32px;
+    
+}
+
+.sectionHeader {
+  color: $secondary-dark-blue;
+  font-size: 36px;
+  font-weight: 600;
+  text-align: left;
 }
