--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -16,17 +16,6 @@ $lawconnect-gradient: linear-gradient(
 html {
   font-family: 'Nunito', sans-serif;
   font-weight: 400;
-}
-
-.sectionContainer{
-    padding-top: 32px;
-    padding-bottom: 32px;
-    
-}
-
-.sectionHeader {
-  color: $secondary-dark-blue;
-  font-size: 36px;
-  font-weight: 600;
-  text-align: left;
+  letter-spacing: 0.08px;
+  
 }
