--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
 
 $primary-vivid-blue: #0e5fe3;
 $primary-black: #191919;
@@ -14,8 +14,10 @@ $lawconnect-gradient: linear-gradient(
 );
 
 html {
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   font-weight: 400;
   letter-spacing: 0.08px;
-  
+  overflow: -moz-scrollbars-vertical;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
