--- a/src/style/jumbotron.scss
+++ b/src/style/jumbotron.scss
@@ -36,8 +36,8 @@
 .textBox {
   inline-size: 445px;
   overflow-wrap: break-word;
-  margin-left: 5%;
-  margin-right: 5%;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 .withBGColor {
