--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -15,9 +15,69 @@ $lawconnect-gradient: linear-gradient(
 
 html {
   font-family: "Nunito", sans-serif;
-  font-weight: 400;
   letter-spacing: 0.08px;
   overflow: -moz-scrollbars-vertical;
   overflow-x: hidden;
   overflow-y: auto;
+}
+
+p {
+  font-weight: 400;
+  font-size: 16px;
+  color: $primary-black;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 48px;
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 36px;
+}
+
+h3 {
+  font-weight: 600;
+  font-size: 18px;
+  color: $primary-vivid-blue;
+}
+
+// Responsive
+
+@media screen and (max-width: 768px) {
+  p {
+    font-weight: 400;
+    font-size: 14px;
+    color: $primary-black;
+  }
+
+  h1 {
+    font-weight: 700;
+    font-size: 32px;
+  }
+
+  h2 {
+    font-weight: 600;
+    font-size: 24px;
+  }
+
+  h3 {
+    font-weight: 600;
+    font-size: 18px;
+  }
+
+  .hideOnMobile {
+    display: none !important;
+  }
+
+  .showOnMobile {
+    display: contents !important;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hideOnDesktop {
+    display: none !important;
+  }
 }
