--- a/src/style/CardSection.scss
+++ b/src/style/CardSection.scss
@@ -14,7 +14,7 @@
 }
 
 .card {
-  background: #ffffff;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
   box-shadow: 0px 5px 15px #00000026;
   border-radius: 5px;
   max-width: 322px;
@@ -22,10 +22,12 @@
   card-image {
     width: 322px !important;
     height: 160px !important;
+    border-radius: 5px 5px 0px 0px !important;
   }
   img {
     width: 322px !important;
     height: 160px !important;
+    border-radius: 5px 5px 0px 0px !important;
   }
 
   .card-body {
